# openttd_plots

./: .gitignore  _quarto.yml  cargo_stats.csv  main.py  manhattan.py  plot_cargo.py  pyproject.toml  quarto.yml  read.py
