[project]
name = "openttd-plots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.5.0",
    "matplotlib>=3.10.6",
    "polars>=1.32.3",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
openttd-plots = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipython = ">=9.5.0,<10"
ruff = ">=0.12.11,<0.13"
