[project]
name = "openttd-plots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.5.0",
    "polars>=1.32.3",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
openttd-plots = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipython = ">=9.5.0,<10"
ruff = ">=0.12.11,<0.13"
skrub = ">=0.6.1,<0.7"
seaborn = ">=0.13.2,<0.14"
plotly = ">=6.3.0,<7"
nbformat = ">=5.10.4,<6"
ipykernel = ">=6.30.1,<7"
scipy = ">=1.16.1,<2"
